releng: add product
Change-Id: I1507e657bc8b27f14af1e8a8f67e765e46cb8c7f
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>