@@ -347,7 +347,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,PublishStep_21,report_feature,emde,PublishStep_24,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,emde_feature,diagrams,PublishStep_34,diagrams_representation_feature,docgen,PublishStep_37,PublishStep_38,docgen_features,BuildStep_40,PublishStep_41,composer_feature,BuildStep_43,PublishStep_44,transposer_feature,ad,PublishStep_47,PublishStep_48,PublishStep_49,PublishStep_50,ad_feature,ad_dsl,PublishStep_53,PublishStep_54,addsl_feature,detachment,PublishStep_57,detachment_feature,BuildStep_59,PublishStep_60,PublishStep_61,PublishStep_62,sdk_feature,kitalpha,fix_eclipse.ini,zip_juno_results" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,common,PublishStep_6,common_feature,BuildStep_8,PublishStep_9,accuracy_feature,resourcereuse,PublishStep_12,PublishStep_13,resourcereuse_feature,BuildStep_15,PublishStep_16,cadence_feature,report,PublishStep_19,PublishStep_20,PublishStep_21,report_feature,emde,PublishStep_24,PublishStep_25,PublishStep_26,PublishStep_27,PublishStep_28,PublishStep_29,PublishStep_30,PublishStep_31,emde_feature,diagrams,PublishStep_34,diagrams_representation_feature,docgen,PublishStep_37,PublishStep_38,docgen_features,BuildStep_40,PublishStep_41,composer_feature,BuildStep_43,PublishStep_44,transposer_feature,ad,PublishStep_47,PublishStep_48,PublishStep_49,PublishStep_50,ad_feature,ad_dsl,PublishStep_53,PublishStep_54,addsl_feature,detachment,PublishStep_57,detachment_feature,BuildStep_59,PublishStep_60,PublishStep_61,PublishStep_62,sdk_feature,kitalpha,AntStep_65,EgfStep_66,zip_juno_results" />
 	<target name="TP_juno" depends="TP_juno_TP_juno,TP_juno_install_cots_features,TP_juno_install_ecoretools2" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build" />
 	<target name="releng" depends="releng_BuildStep_1,releng_PublishStep_2,releng_build_feature" />
@@ -1838,30 +1838,27 @@ This file was generated by Eclipse EGF
 	</target>
 
 
-	<target name="fix_eclipse.ini">
-		<antcall target="fixConfig"/>
+	<target name="AntStep_65">
+		<antcall target="move_egf_to_tools2"/>
 	</target>
 
-<target name="fixConfig">
-	<echo file="${publish}/TP_juno/eclipse.ini">-showLocation
--startup
-plugins/org.eclipse.equinox.launcher_1.3.0.v20120522-1813.jar
---launcher.library
-plugins/org.eclipse.equinox.launcher.win32.win32.x86_1.1.200.v20120913-144807
--showsplash
-org.eclipse.platform
---launcher.XXMaxPermSize
-256m
---launcher.defaultAction
-openFile
--vmargs
--Xms128m
--Xmx512m
--XX:PermSize=64M
--XX:MaxPermSize=512M
-</echo>
+<target name="move_egf_to_tools2">
+	<delete dir="${tools}/egf"/>
+	<move file="${publish}/TP_build" tofile="${tools}/egf" />
 </target>
 
+	<target name="EgfStep_66" depends="init,install.egf">
+		<egf>
+            <globargs>
+				<jvmarg value="-DplatformPath=${publish}/TP_juno" />
+				<jvmarg value="-Dversion=${mdk_version}" />
+				<jvmarg value="-DbuildId=${timestamp}" />            
+			</globargs>
+			<activities>
+				<arg value="platform:/plugin/org.polarsys.kitalpha.releng/egf/customPlatform.fcore#_iQtBQK1QEeCY7YPdntiIaQ"/>
+			</activities>
+		</egf>
+	</target>
 	<target name="kitalpha" depends="init,install.egf" >
 		<anteclipse target="kitalpha_dropins" />
 		<anteclipse target="kitalpha_sitep2" />
